--- a/src/main/resources/templates/add-seller.html
+++ b/src/main/resources/templates/add-seller.html
@@ -38,13 +38,22 @@
                             <tr>
                                 <td scope="row"><p> ФИО </p></td>
                                 <td>
-                                    <input th:field="*{fio}" placeholder="Фамилия Имя Отчество" class="form-control" type="text" name="price"/>
+                                    <input id="fio" name="fio" th:value="${seller.getFio()!=null}?${#strings.trim(seller.getPhone())}" placeholder="Фамилия Имя Отчество" class="form-control" type="text" />
+                                    <div style="color:red" th:if="${#fields.hasErrors('fio')}" th:errors="*{fio}"></div>
                                 </td>
                             </tr>
                             <tr>
                                 <td scope="row"><p> Номер и серия паспорта </p></td>
                                 <td>
-                                    <input th:field="*{passport}" placeholder="Данные паспорта" class="form-control" type="text" name="price"/>
+                                    <input id="passport" name="passport" th:value="${seller.getPassport()!=null}?${#strings.trim(seller.getPassport())}" placeholder="Данные паспорта" class="form-control" type="text" />
+                                    <div style="color:red" th:if="${#fields.hasErrors('passport')}" th:errors="*{passport}"></div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td scope="row"><p> Телефон </p></td>
+                                <td>
+                                    <input id="phone" name="phone" th:value="${seller.getPhone()!=null}?${#strings.trim(seller.getPhone())}" placeholder="Номер телефона" class="form-control" type="text" />
+                                    <div style="color:red" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></div>
                                 </td>
                             </tr>
                             <tr>
