--- a/src/main/resources/templates/add-object.html
+++ b/src/main/resources/templates/add-object.html
@@ -91,7 +91,7 @@
                                 </td>
                             </tr>
                             <th:block th:if="${object.getIdObject()!=null}">
-                                <input type="hidden" id="idObject" th:field="*{idObject}"/>
+                                <input type="hidden" id="idObject" name="idObject" th:field="*{idObject}"/>
                             </th:block>
                             <tr>
                                 <td scope="row"><p> Цена продавца </p></td>
