--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -26,9 +26,9 @@
                 <div class="ui-item">
                     <!-- Unordered list -->
                     <ul class="list-unstyled">
-                        <li><a href="/managers/objects">Объекты</a></li>
-                        <li><a href="/managers/clients/sellers">Продавцы</a></li>
-                        <li><a href="/managers/clients/buyers">Покупатели</a></li>
+                        <li><a href="/managers/objects"><h6>Объекты</h6></a></li>
+                        <li><a href="/managers/clients/sellers"><h6>Продавцы</h6></a></li>
+                        <li><a href="/managers/clients/buyers"><h6>Покупатели</h6></a></li>
                     </ul>
                 </div>
             </div>
