--- a/src/main/resources/templates/all-buyer.html
+++ b/src/main/resources/templates/all-buyer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>UI Design</title>
 
     <link th:href="@{/css/style-304.css}" rel="stylesheet"/>
@@ -27,7 +27,7 @@
                 <form th:action="@{/managers/clients/buyers}" id="filter"
                       method="get" >
                     <div class="input-group">
-                        <input name="search" type="text" class="form-control" placeholder="Поиск" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
+                        <input name="search" type="text" class="form-control" placeholder="Поиск" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4"/>
                         <div class="input-group-append" id="button-addon4">
                             <button class="btn btn-outline-primary" type="submit">Найти</button>
                             <a class="btn btn-outline-danger" id="clean">Сбросить</a>
@@ -69,6 +69,7 @@
             </div>
         </div>
     </div>
+</div>
     <!-- Resume Ends -->
 
     <!-- Javascript files -->
