--- a/src/main/resources/templates/add-buyer.html
+++ b/src/main/resources/templates/add-buyer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>UI Design</title>
     <!-- Description, Keywords and Author -->
     <link th:href="@{/css/style-304.css}" rel="stylesheet"/>
