--- a/src/main/resources/templates/all-seller.html
+++ b/src/main/resources/templates/all-seller.html
@@ -33,7 +33,7 @@
                 <form th:action="@{/managers/clients/sellers}" id="filter"
                       method="get" >
                     <div class="input-group">
-                        <input name="search" type="text" class="form-control" placeholder="Поиск" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
+                        <input name="search" type="text" class="form-control" placeholder="Поиск" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4"/>
                         <div class="input-group-append" id="button-addon4">
                             <button class="btn btn-outline-primary" type="submit">Найти</button>
                             <a class="btn btn-outline-danger" id="clean">Сбросить</a>
@@ -75,6 +75,7 @@
             </div>
         </div>
     </div>
+</div>
     <!-- Resume Ends -->
 
     <!-- Javascript files -->
